--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.body{
+  background-color: rgb(245, 235, 235, 0.69);
+  margin: 30px 100px;
+}
