--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
-.body{
+.App {
+    text-align: center;
+    background: #E8E8E8;
+    height: fit-content;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.headercarousal {
+    padding-top: 3%;
+}
+
+.body {
     background-color: rgb(245, 235, 235, 0.69);
     margin: 30px 100px;
 }
-
