--- a/src/styles/Header2.css
+++ b/src/styles/Header2.css
@@ -50,3 +50,16 @@ select#tender, select#properties{
     border-left: 2px solid rgb(255, 255, 255, 0.29);
     height: 44px;
 }
+
+.loginWindow{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 80%;
+    height: 100vh;
+    background-color: rgb(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
