routing and new pages

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ code {
   background-color: rgb(245, 235, 235, 0.69);
   margin: 30px 100px;
 }
+
+*, ::after, ::before {
+  box-sizing: content-box !important;
+}
