--- a/src/styles/Header1.css
+++ b/src/styles/Header1.css
@@ -5,6 +5,9 @@
     height: 48px;
     align-items: center;
     background-color: rgb(255, 255, 255, 0.75);
+    /* position: relative;
+    top: 0;
+    width: 100%; */
 }
 
 .pages a{
