--- a/src/styles/Partner.css
+++ b/src/styles/Partner.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 .Partner{
     width: 1100px;
     height: 400px;
