--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -10,7 +10,7 @@
 }
 
 .continue{
-    margin: 50px auto;
+    margin: 50px auto 10px auto;
     display: block;
     width: 190px;
     height: 41px;
