--- a/src/styles/Optionssignup.css
+++ b/src/styles/Optionssignup.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    margin-top: 5%;
   }
   
   .indiviselectsignup,
@@ -43,7 +44,7 @@
   }
   
   .dividersignup {
-    position: absolute;
+    /*position: absolute;*/
     width: 63px;
     height: 0px;
     left: 579.5px;
