--- a/src/styles/Signupform.css
+++ b/src/styles/Signupform.css
@@ -1,67 +1,88 @@
 .form-wrappergovernmentsignup {
-    position: relative;
+    display: flex;
+    justify-content: center;
     width: 100%;
-    height: 400px;
-    margin-left: 4%;
+    height: auto;
+    margin: 0 auto;
+    padding-top: 2%;
 }
+
 body {
     color: white;
+    background-color: #282828;
 }
+
 .formcontainergovernmentsignup {
-    position: absolute;
-    top: 48%;
-    left: 23%;
-    transform: translate(-50%, -40%);
+    margin-top: 4%;
+    transform: translateY(-5%);
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    width: 50%;
+    width: 80%;
 }
+
 .inlinesectionformgovernmentsignup {
     display: flex;
     justify-content: space-between;
-    gap: 10px;
+    gap: 20px;
+    margin-bottom: 20px;
 }
+
 .inputdetgovernmentsignup {
     flex: 1;
-    margin: 4%;
+    margin: 0 20px;
 }
+
 .inputdetgovernmentsignup input {
-    margin-left: 20%;
     width: 100%;
     background: #3D3D3D;
     border: 1px solid #FFFFFF;
     color: white;
     border-radius: 8px;
     padding: 10px;
+    box-sizing: border-box;
 }
-.phone-inputgovernmentsignup{
-    margin-top: 15px;
-    margin-left: 12%;
+#inputsignupnationality input
+{
+    width: 80%;
+    margin-right: 45px;
 }
-.phone-input-containersignup{
-    margin-left: 0;
-    width: 145%;
+#inputsignupnationality label
+{
+    margin-right: 60px;
+}
+
+.inputsignupnationality {
+    flex: 0.5; 
+    margin: 0 1px; 
+}
+
+
+
+.phone-inputgovernmentsignup {
+    flex: 1;
+    margin-right: 12%;
+}
+
+.phone-input-containersignup {
+    width: 80%;
     background: #3D3D3D;
     border: 1px solid #FFFFFF;
     color: white;
     border-radius: 8px;
-    padding-left: 25%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-right: 10%;
+    padding: 10px;
 }
-#querycolgovernment{
-    width: 240%;
+
+.phone-input-containersignup {
+    padding-left: 15%;
 }
-#regaddgovernment{
-    width: 240%;
+
+#querycolgovernment, #regaddgovernment {
+    width: 100%;
 }
-.submitgovernmentsignup{
-    position: absolute;
-    top: 70%;
-    left: 130%;
+
+.submitgovernmentsignup {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,10 +91,7 @@ body {
     background: #FF6800;
     border-radius: 8px;
     cursor: pointer;
+    margin: 20px auto 0;
 }
 
-#firstsection
-{
-    width: 158%;
-   
-}
+
