done changes to different pages some work still pending

--- a/src/styles/Headerpartnership.css
+++ b/src/styles/Headerpartnership.css
@@ -32,8 +32,11 @@
 }
 
 .mainpartner {
-    position: absolute;
-    width: 1135px;
+    margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+    width: 90%;
     height: 110%;
     left: 5%;
     top: 15%;
