--- a/src/styles/Businessform.css
+++ b/src/styles/Businessform.css
@@ -1,15 +1,13 @@
 .form-wrapperbusiness {
-    position: relative;
     width: 100%;
     height: 400px;
+    margin-left: 20%;
 }
 body {
     color: white;
 }
 .formcontainerbusiness {
-    position: absolute;
-    top: 48%;
-    left: 23%;
+    margin-top: 20%;
     transform: translate(-50%, -40%);
     display: flex;
     flex-direction: column;
