--- a/src/styles/Governmentform.css
+++ b/src/styles/Governmentform.css
@@ -1,15 +1,14 @@
 .form-wrappergovernment {
-    position: relative;
+    
     width: 100%;
     height: 400px;
+    margin-top: 20%;
 }
 body {
     color: white;
 }
 .formcontainergovernment {
-    position: absolute;
-    top: 48%;
-    left: 23%;
+    margin-left: 20%;
     transform: translate(-50%, -40%);
     display: flex;
     flex-direction: column;
