--- a/src/styles/Infoform.css
+++ b/src/styles/Infoform.css
@@ -1,7 +1,8 @@
 .form-wrapper {
-    position: relative;
+    
     width: 100%;
     height: 400px;
+    margin-left: 20%;
 }
 
 body {
@@ -9,9 +10,7 @@ body {
 }
 
 .formcontainer {
-    position: absolute;
-    top: 48%;
-    left: 23%;
+    margin-top: 20%;
     transform: translate(-50%, -40%);
     display: flex;
     flex-direction: column;
