--- a/src/styles/RentalAggrementmain.css
+++ b/src/styles/RentalAggrementmain.css
@@ -39,11 +39,11 @@ body {
     height: 508px;
     left: 87px;
     top: 70px;
+    margin-top: 7%;
 }
 
 .rightsectionrental {
-    /* Frame 57 */
-
+   
     position: absolute;
     width: 422px;
     height: 500px;
@@ -54,9 +54,8 @@ body {
     border-radius: 30px;
 
 }
-
 .leftsectionheading {
-    /* Online Rental Agreement */
+    
 
     width: 578px;
     height: 38px;
@@ -83,11 +82,11 @@ body {
 
 .rentalaggrementcont {
     width: 478px;
-    height: 35px;
+    height: 37px;
 
     background: rgba(0, 0, 0, 0.11);
     color: white;
-    /* Inside auto layout */
+    margin-top: 2%;
     flex: none;
     order: 1;
     flex-grow: 0;
@@ -104,9 +103,7 @@ body {
 }
 
 .formrentalagg {
-    /* Frame 201 */
-
-    /* Auto layout */
+    
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -117,7 +114,7 @@ body {
     height: 70px;
 
 
-    /* Inside auto layout */
+    
     flex: none;
     order: 1;
     align-self: stretch;
@@ -125,14 +122,16 @@ body {
 
 }
 
-.form-wrappergovernment {
-    position: relative;
+.form-wrappergovernmentrentalaggrement {
+   
     width: 100%;
     height: 400px;
+
 }
 
-.formcontainergovernment {
-    position: absolute;
+.formcontainergovernmentrentalaggrement {
+    margin-top: 15%;
+    margin-left: 45%;
     top: 12%;
     left: 50%;
     transform: translate(-50%, -40%);
@@ -144,23 +143,23 @@ body {
 }
 
 
-.inputdetgovernment {
+.inputdetgovernmentrentalaggrement {
     text-align: center;
     flex: 1;
     margin-bottom: 2%;
     margin-right: 70%;
 }
 
-.inputdetgovernment input {
+.inputdetgovernmentrentalaggrement input {
     width: 200px;
     border: 1px solid #FFFFFF;
-    margin-right: 50px;
+    margin-right: 60px;
     border-radius: 8px;
     padding: 15px;
     border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
-.submitgovernment {
+.submitgovernmentrentalaggrement {
     position: absolute;
     top: 100%;
     margin-top: 30px;
