--- a/src/styles/Infoform.css
+++ b/src/styles/Infoform.css
@@ -63,7 +63,7 @@ body {
     width: 220%;
 }
 
-.submit {
+.submitpersonal {
     position: absolute;
     top: 90%;
     left: 110%;
@@ -75,4 +75,5 @@ body {
     background: #FF6800;
     border-radius: 8px;
     cursor: pointer;
+    color: white;
 }
