--- a/src/styles/Signupform.css
+++ b/src/styles/Signupform.css
@@ -7,10 +7,7 @@
     padding-top: 2%;
 }
 
-body {
-    color: white;
-    background-color: #282828;
-}
+
 
 .formcontainergovernmentsignup {
     margin-top: 4%;
@@ -48,9 +45,14 @@ body {
     width: 80%;
     margin-right: 45px;
 }
+label
+{
+    color: white;
+}
 #inputsignupnationality label
 {
     margin-right: 60px;
+    color: white;
 }
 
 .inputsignupnationality {
@@ -92,6 +94,7 @@ body {
     border-radius: 8px;
     cursor: pointer;
     margin: 20px auto 0;
+    color: white;
 }
 
 
