--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,7 +1,7 @@
 .Main{
     width: 1029px;
     /* height: 1164px; */
-    background-color: #3D3D3D;
+    background-color: white;
     border-radius: 25px;
     position: relative;
     margin: auto;
