--- a/src/styles/BuyResCard.module.css
+++ b/src/styles/BuyResCard.module.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 .buyResCard{
-    width: 948px;
-    height: 336px;
+    width: 978px;
+    height: 306px !important;
     background-color: white;
     margin: 20px auto;
     padding: 5px;
@@ -44,7 +44,6 @@
     border-radius: 21px;
     margin-left: 10px !important;
     background-color: white;
-    
 }
 
 .verified{
@@ -85,7 +84,7 @@
 
 .infoFirst, .infoSec{
     /* border-right: 1px solid black; */
-    margin-right: 45px;
+    margin-right: 55px;
     font-size: 17px;
 }
 
@@ -94,7 +93,7 @@
 }
 
 .row1{
-    margin-top: 22px;
+    margin-top: 15px;
 }
 
 .infoThird{
@@ -105,7 +104,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .price button{
