--- a/src/styles/BuyResCard2.module.css
+++ b/src/styles/BuyResCard2.module.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 .buyResCard{
-    width: 948px;
-    height: 356px;
+    width: 968px;
+    height: 306px !important;
     background-color: white;
     margin: 20px auto;
     padding: 5px;
@@ -21,7 +21,7 @@
 
 .heroImg{
     width: 300px;
-    height: 245px;
+    height: 255px;
     border-radius: 8px;
 }
 
@@ -85,7 +85,7 @@
 
 .infoFirst, .infoSec{
     /* border-right: 1px solid black; */
-    margin-right: 45px;
+    margin-right: 56px;
     font-size: 17px;
 }
 
@@ -94,7 +94,7 @@
 }
 
 .row1{
-    margin-top: 22px;
+    margin-top: 15px;
 }
 
 .last{
@@ -109,7 +109,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 10px;
     text-align: center;
 }
 
