--- a/src/styles/BuyResCard3.module.css
+++ b/src/styles/BuyResCard3.module.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 .buyResCard{
-    width: 948px;
-    height: 356px;
+    width: 968px;
+    height: 300px !important;
     background-color: white;
     margin: 20px auto;
     padding: 5px;
@@ -20,8 +20,8 @@
 }
 
 .heroImg{
-    width: 300px;
-    height: 245px;
+    width: 310px;
+    height: 275px;
     border-radius: 8px;
 }
 
@@ -70,7 +70,7 @@
 .row{
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     /* max-width: 220px; */
     /* border-right: 1px solid black; */
     font-size: 16px;
@@ -86,7 +86,7 @@
 
 .infoFirst, .infoSec{
     /* border-right: 1px solid black; */
-    margin-right: 10px;
+    margin-right: 15px;
     font-size: 17px;
 }
 
@@ -95,7 +95,7 @@
 }
 
 .row1{
-    margin-top: 22px;
+    margin-top: 15px;
 }
 
 .last{
@@ -155,7 +155,8 @@
 
 .extra{
     background-color: #D9D9D9;
-    padding: 15px 10px;
+    padding: 10px;
+    border-radius: 8px;
 }
 
 .avail{
