--- a/src/styles/Businessform.css
+++ b/src/styles/Businessform.css
@@ -17,6 +17,9 @@
     justify-content: space-between;
     gap: 10px;
 }
+.inlinesectionformbusiness label {
+    color: rgba(61, 61, 61, 0.5);
+}
 .inputdetbusiness {
     flex: 1;
     margin: 4%;
@@ -24,9 +27,10 @@
 .inputdetbusiness input {
     margin-left: 20%;
     width: 100%;
-    background: #3D3D3D;
-    border: 1px solid #FFFFFF;
-    color: white;
+    background: #F2F2F2;
+     
+    border: 1px solid rgba(61, 61, 61, 0.5);
+    color: rgba(61, 61, 61, 0.5);;
     border-radius: 8px;
     padding: 10px;
 }
@@ -37,9 +41,9 @@
 .phone-input-container {
     margin-left: 0;
     width: 70%;
-    background: #3D3D3D;
-    border: 1px solid #FFFFFF;
-    color: white;
+    background: #F2F2F2;
+    border: 1px solid rgba(61, 61, 61, 0.5);
+    color: rgba(61, 61, 61, 0.5);
     border-radius: 8px;
     padding: 10px;
 }
