--- a/src/styles/Governmentform.css
+++ b/src/styles/Governmentform.css
@@ -19,6 +19,9 @@
     justify-content: space-between;
     gap: 10px;
 }
+.inlinesectionformgovernment label {
+    color: rgba(61, 61, 61, 0.5);
+}
 .inputdetgovernment {
     flex: 1;
     margin: 4%;
@@ -26,9 +29,10 @@
 .inputdetgovernment input {
     margin-left: 20%;
     width: 100%;
-    background: #3D3D3D;
-    border: 1px solid #FFFFFF;
-    color: white;
+    background: #F2F2F2;
+     
+    border: 1px solid rgba(61, 61, 61, 0.5);
+    color: rgba(61, 61, 61, 0.5);;
     border-radius: 8px;
     padding: 10px;
 }
@@ -39,9 +43,9 @@
 .phone-input-container {
     margin-left: 0;
     width: 70%;
-    background: #3D3D3D;
-    border: 1px solid #FFFFFF;
-    color: white;
+    background: #F2F2F2;
+    border: 1px solid rgba(61, 61, 61, 0.5);
+    color: rgba(61, 61, 61, 0.5);
     border-radius: 8px;
     padding: 10px;
 }
