--- a/src/styles/Infoform.css
+++ b/src/styles/Infoform.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    color: white;
+    color: black;
 }
 
 .formcontainer {
@@ -24,6 +24,9 @@ body {
     justify-content: space-between;
     gap: 10px;
 }
+.inlinesectionform label {
+    color: rgba(61, 61, 61, 0.5);
+}
 
 .inputdet {
     flex: 1;
@@ -33,9 +36,10 @@ body {
 .inputdet input {
     margin-left: 20%;
     width: 100%;
-    background: #3D3D3D;
-    border: 1px solid #FFFFFF;
-    color: white;
+    background: #F2F2F2;
+     
+    border: 1px solid rgba(61, 61, 61, 0.5);
+    color: rgba(61, 61, 61, 0.5);;
     border-radius: 8px;
     padding: 10px;
 }
@@ -48,9 +52,9 @@ body {
 .phone-input-container {
     margin-left: 0;
     width: 70%;
-    background: #3D3D3D;
-    border: 1px solid #FFFFFF;
-    color: white;
+    background: #F2F2F2;
+    border: 1px solid rgba(61, 61, 61, 0.5);
+    color: rgba(61, 61, 61, 0.5);
     border-radius: 8px;
     padding: 10px;
 }
