--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -4,26 +4,30 @@
     background-color: white;
     border-radius: 25px;
     position: relative;
-    margin: auto;
+    margin: 5%;
+    margin-bottom: 0;
+    margin-top: 20%;
     bottom: 150px;
     padding: 100px 50px;
 }
 
 .line{
-    border-left: 2px solid rgb(255, 255, 255, 0.29);
+    border-left: 2px solid black;
     height: 44px;
 }
 
 .row1 button{
-    background-color: #3D3D3D;
+    
     border: none;
     width: 120px;
+    background-color: white;
 }
 
 .row1{
     display: flex;
     align-items: center;
     margin: 0 22%;
+   
 }
 
 .res{
@@ -63,8 +67,8 @@
     width: 120px;
     height: 35px;
     text-decoration: none;
-    background-color: rgb(0, 0, 0, 0.8);
-    color: white;
+    background: #D9D9D9;
+    color: black;
     border-radius: 4px;
     border: none;
     cursor: pointer;
@@ -115,7 +119,7 @@
     height: 41px;
     padding-left: 50px;
     border-radius: 8px;
-    border: none;
+   
 }
 
 .search{
@@ -140,6 +144,7 @@
     height: 41px;
     margin: 0 15px;
     border: none;
+    border: 2px solid #D9D9D9;
     border-radius: 8px;
     padding: 0 10px;
 }
@@ -154,7 +159,7 @@
 }
 
 .line1{
-    border-top: 2px solid rgb(255, 255, 255, 0.29);
+    border-top: 2px solid #D9D9D9;
     width: 950px;
     height: 0;
     margin-top: 80px;
@@ -199,8 +204,7 @@
 
 select#tender1, select#properties1{
     border: none;
-    background-color: #3D3D3D;
-    color: white;
+    color: black;
     font-weight: 600;
     max-height: 40px;
     margin-top: 57px;
@@ -208,10 +212,10 @@ select#tender1, select#properties1{
 
 .row5{
     margin-left: 2%;
-    color: white;
+    color: black;
 }
 
 .box a{
     text-decoration: none;
-    color: white;
+    color: black;
 }
