--- a/src/styles/partnership.css
+++ b/src/styles/partnership.css
@@ -1,7 +1,7 @@
 .formselection {
     width: 232.87px;
     height: 32.02px;
-    background-color: rgba(88, 87, 90, 0.933333);
+    background: #D9D9D9;
     font-family: 'Arial';
     font-style: normal;
     font-weight: 700;
@@ -9,12 +9,17 @@
     margin: 10px;
     line-height: 100%;
     display: flex;
-    align-items: center;
     letter-spacing: -0.03em;
     text-transform: capitalize;
     color: #FFFFFF;
     border-radius: 10px;
     padding-top: 2%;
+}
+.formlabelpartnership
+{
+    color: rgba(61, 61, 61, 0.5);
+    margin: 0px;
+    margin-bottom: 3%;
 }
 .formoption {
    
@@ -27,6 +32,11 @@
 .inputform
 {
     margin-right: 10px;
-    color: red;
+    padding-left: 20%;
+    margin-left: 5%;
 }
 
+body
+{
+    background-color: black;
+}
