made changes as discussed

--- a/src/styles/Click.css
+++ b/src/styles/Click.css
@@ -2,10 +2,11 @@
 
 .Click{
     width: 929px;
-    height: 170px;
+    height: 140px;
     display: block;
     margin: 0 auto;
-    margin-bottom: 150px;
+    margin-top: -50px;
+    margin-bottom: 100px;
     padding: 20px 25px;
     border-radius: 10px;
     display: flex;
