--- a/src/styles/BuyResCard.module.css
+++ b/src/styles/BuyResCard.module.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 .buyResCard{
-    width: 978px;
-    height: 306px !important;
+    width: 998px;
+    height: 286px !important;
     background-color: white;
     margin: 20px auto;
     padding: 5px;
@@ -20,14 +20,15 @@
 }
 
 .heroImg{
-    width: 300px;
-    height: 245px;
+    width: 330px;
+    height: 285px;
     border-radius: 8px;
 }
 
 .adress{
     width: 378px;
     margin: 0;
+    font-size: 20.6px;
 }
 
 .first{
@@ -80,6 +81,7 @@
 
 .info{
     display: flex;
+    margin-top: -7px;
 }
 
 .infoFirst, .infoSec{
@@ -104,18 +106,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
-.price button{
+.link{
+    display: flex; /* Make .link a flex container */
+    align-items: center; /* Vertically center the content */
+    justify-content: center; /* Horizontally center the content */
     background-color: #FF6800;
     width: 161px;
-    height: 32px;
+    height: 42px;
     color: white;
     border: none;
     border-radius: 21px;
     margin-left: 10px;
     font-weight: 700;
+    text-decoration: none;
 }
 
 .filter{
@@ -128,6 +134,12 @@
     display: inline-block;
 }
 
+.price h5{
+    display: inline-block;
+    font-size: 22px;
+    font-weight: 700;
+}
+
 .price p{
     margin: 0;
     text-align: center;
@@ -135,4 +147,10 @@
 
 .end img{
     margin-right: 5px ;
+}
+
+.content .linee{
+    width: 100%;
+    height: 1px;
+    background-color: black;
 }
