--- a/src/styles/BuyResCard2.module.css
+++ b/src/styles/BuyResCard2.module.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 .buyResCard{
-    width: 968px;
-    height: 306px !important;
+    width: 998px;
+    height: 296px !important;
     background-color: white;
     margin: 20px auto;
     padding: 5px;
@@ -20,8 +20,8 @@
 }
 
 .heroImg{
-    width: 300px;
-    height: 255px;
+    width: 330px;
+    height: 285px;
     border-radius: 8px;
 }
 
@@ -78,9 +78,10 @@
 .row p{
     margin: 0;
 }
-
+ 
 .info{
     display: flex;
+    margin-top: -7px;
 }
 
 .infoFirst, .infoSec{
@@ -134,6 +135,27 @@
     display: inline-block;
 }
 
+.price h5{
+    display: inline-block;
+    font-size: 22px;
+    font-weight: 700;
+}
+
+.link{
+    display: flex; /* Make .link a flex container */
+    align-items: center; /* Vertically center the content */
+    justify-content: center; /* Horizontally center the content */
+    background-color: #FF6800;
+    width: 161px;
+    height: 42px;
+    color: white;
+    border: none;
+    border-radius: 21px;
+    margin-left: 10px;
+    font-weight: 700;
+    text-decoration: none;
+}
+
 .price p{
     margin: 0;
     text-align: center;
@@ -141,4 +163,10 @@
 
 .end img{
     margin-right: 5px ;
+}
+
+.content .linee{
+    width: 100%;
+    height: 1px;
+    background-color: black;
 }
