--- a/src/styles/BuyResCard3.module.css
+++ b/src/styles/BuyResCard3.module.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 .buyResCard{
-    width: 968px;
-    height: 300px !important;
+    width: 998px;
+    height: 296px !important;
     background-color: white;
     margin: 20px auto;
     padding: 5px;
@@ -20,8 +20,8 @@
 }
 
 .heroImg{
-    width: 310px;
-    height: 275px;
+    width: 330px;
+    height: 285px;
     border-radius: 8px;
 }
 
@@ -62,6 +62,21 @@
     margin: 0 10px;
 }
 
+.link{
+    display: flex; /* Make .link a flex container */
+    align-items: center; /* Vertically center the content */
+    justify-content: center; /* Horizontally center the content */
+    background-color: #FF6800;
+    width: 161px;
+    height: 42px;
+    color: white;
+    border: none;
+    border-radius: 21px;
+    margin-left: 10px;
+    font-weight: 700;
+    text-decoration: none;
+}
+
 .first{
     display: flex;
     margin: 0 0 15px 0;
@@ -82,6 +97,7 @@
 
 .info{
     display: flex;
+    margin-top: -7px;
 }
 
 .infoFirst, .infoSec{
@@ -162,3 +178,15 @@
 .avail{
     font-size: 15.3px;
 }
+
+.price h5{
+    display: inline-block;
+    font-size: 22px;
+    font-weight: 700;
+}
+.content .linee{
+    width: 100%;
+    height: 1px;
+    background-color: black;
+}
+
