done changes to partnership pages

--- a/src/styles/Businessform.css
+++ b/src/styles/Businessform.css
@@ -71,3 +71,24 @@
 {
     width: 148%;
 }
+.Buisnessfirst
+{
+    margin-right: 15%;
+}
+#comapanybusiness
+{
+    margin-left: 4%;
+}
+#companyaddbusiness
+{
+    margin-left: 4%;
+}
+#emailidbusiness
+{
+    margin-right: 28%;
+}
+#mobnobusiness
+{
+    color: rgba(61, 61, 61, 0.5);
+    margin-right: 82%;
+}
