--- a/src/styles/Businessform.css
+++ b/src/styles/Businessform.css
@@ -77,11 +77,13 @@
 }
 #comapanybusiness
 {
-    margin-left: 4%;
+    margin-left: 84%;
+    width: 95%;
 }
 #companyaddbusiness
 {
     margin-left: 4%;
+    width: 93%;
 }
 #emailidbusiness
 {
