--- a/src/styles/Maincontentrentnowpaylat.css
+++ b/src/styles/Maincontentrentnowpaylat.css
@@ -8,6 +8,8 @@ body
 }
 .labelrentnowpaylat 
 {
+    width: 50%;
+    margin-right: 65%;
     color: #000000;
 }
 .prop1imagerentnowpaylater {
@@ -23,7 +25,7 @@ body
     width: 222.6px;
     height: 230.04px;
     left: 720.25px;
-    top: 645px;
+    top: 595px;
 }
 
 .leftsectionformcontrentnowpaylater {
@@ -90,7 +92,7 @@ p {
     width: 518px;
     height: 105%;
     left: 728px;
-    top: 223px;
+    top: 165px;
 
     background: rgba(0, 0, 0, 0.08);
     border-radius: 25px;
@@ -142,7 +144,8 @@ p {
 .secondsectionformrentnow {
     width: 494px;
     height: 50px;
-
+    position: absolute;
+    top: 495px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
@@ -163,7 +166,8 @@ p {
     align-items: flex-start;
     padding: 0px;
     gap: 26px;
-
+    position: absolute;
+    top: 540px;
     width: 494px;
     height: 41px;
 }
