--- a/src/styles/Auctionrulespointer.module.css
+++ b/src/styles/Auctionrulespointer.module.css
@@ -38,7 +38,9 @@
     border-radius: 8px;
     cursor: pointer;
     margin-left: 39%;
+    text-decoration: none;
 }
+
 .auctionbutton:hover
 {
     background-color:darkslategrey;
