--- a/src/styles/BuyResCard2.module.css
+++ b/src/styles/BuyResCard2.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 .buyResCard{
-    width: 998px;
+    width: 100%;
     height: 296px !important;
     background-color: white;
     margin: 20px auto;
