--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -4,9 +4,9 @@
     background-color: white;
     border-radius: 25px;
     position: relative;
-    margin: 5%;
+    margin: 0 auto;
     margin-bottom: 0;
-    margin-top: 20%;
+    margin-top: 15%;
     bottom: 150px;
     padding: 100px 50px;
 }
