--- a/src/styles/Signupform.css
+++ b/src/styles/Signupform.css
@@ -45,7 +45,7 @@
     width: 80%;
     margin-right: 45px;
 }
-label
+.inputdetgovernmentsignup label
 {
     color: rgba(0, 0, 0, 0.5);
     margin-right: 70%;
