--- a/src/styles/Headerrentalaggrement3.css
+++ b/src/styles/Headerrentalaggrement3.css
@@ -1,10 +1,8 @@
 .thirdheaderrentalagg {
-    position: absolute;
+    margin-left: 30%;
+    margin-bottom: 4%;
     width: 545px;
     height: 48px;
-    left: 28%;
-    top: 1510px;
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
@@ -16,8 +14,8 @@
 
 
 .subheadheader3 {
-    position: absolute;
-    width: 545px;
+   
+    width: 100%;
     height: 48px;
     left: 28%;
     top: 1580px;
