--- a/src/styles/RentalAggrementmain.css
+++ b/src/styles/RentalAggrementmain.css
@@ -12,9 +12,7 @@ body {
   }
   
 .holderrentalaggrement {
-    position: relative;
     width: 100%;
-    height: 2909px;
     background: #D9D9D9;
 }
 .labelpropmanag
@@ -22,46 +20,44 @@ body {
     color: black;
 }
 .contentholdrentalagg {
-    position: absolute;
     width: 1128px;
     height: 720px;
-    left: 5%;
-    top: 75px;
     background: #3D3D3D;
     box-shadow: 0px 4px 8.2px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
     display: flex;
-    flex-direction: column;
+    flex-direction:row ;
     align-items: center;
     padding: 0px;
     gap: 15px;
+    margin-top: 10%;
+    margin-left: 7%;
+    margin-right: 10%;
+    margin-bottom: 10%;
 }
 
 .leftsectionrental {
     display: flex;
     flex-direction: column;
     align-items: left;
+    text-align: left;
+   
     padding: 0px;
     gap: 7px;
-    position: absolute;
-    width: 578px;
-    height: 508px;
-    left: 87px;
-    top: 70px;
+    height: auto;
     margin-top: 7%;
 }
 
 .rightsectionrental {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
    
-    position: absolute;
     width: 422px;
     height: 500px;
-    left: 657px;
-    top: 125px;
     background: #FFFFFF;
     box-shadow: 0px 4px 7.8px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
-
 }
 .leftsectionheading {
     
