--- a/src/styles/Infoform.css
+++ b/src/styles/Infoform.css
@@ -1,7 +1,7 @@
 .form-wrapper {
     
     width: 100%;
-    height: 400px;
+    height: 350px;
     margin-left: 20%;
 }
 
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: space-between;
     gap: 10px;
+    margin-top: 3.3%;
 }
 .inlinesectionform label {
     color: rgba(61, 61, 61, 0.5);
