done some changes to rentalagg

--- a/src/styles/Faqrental5.module.css
+++ b/src/styles/Faqrental5.module.css
@@ -9,6 +9,7 @@
     height: auto;
     border-radius: 16px;
     transition: background-color 0.3s ease; /* Smooth transition */
+    margin-bottom: 3%;
 }
 
 .faqcontrental {
